--- a/components/dialogs/legal/legal.dialog.scss
+++ b/components/dialogs/legal/legal.dialog.scss
@@ -1,5 +1,5 @@
-.legal-dialog {
-
+.tab {
+  letter-spacing: 1px;
 }
 
 .scroll-fix {
